# hdx_codec

./: .gitignore  Cargo.toml  LICENSE  LPS.py  LPS_13_5.csv  LPS_23_5.csv  README.md  build.rs  lps_3_5.hg  main.typst  profile.json  rust_toolchain.toml
.VSCodeCounter/2023-08-23_08-30-20/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-09-05_16-53-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
bench/: galois_bench.py  galois_bench_data.json
benchmark/: galois_bench.py
notes/: main.tex
scripts/: coset_config.txt  galois_bench.py  small_quantum_codes.py
src/: classical.rs  classical_codes.rs  code.rs  first_node.rs  hasher.rs  hdx_code.rs  iterative_rank_estimator.rs  iterative_rank_estimator_old.rs  left_right_cayley.rs  lib.rs  lps.rs  new_rate_and_dist_estimator.rs  quantum.rs  rank_estimator_sparse.rs  rank_estimator_sparse_sparse.rs  rate_and_dist_estimator.rs  reed_solomon.rs  surface.rs  tanner_code.rs
src/math/: cayley_graph.rs  coset_complex.rs  coset_complex_bfs.rs  coset_complex_subgroups.rs  ffmatrix.rs  ffx_bfs.rs  ffx_matrix.rs  finite_field.rs  galois_field.rs  galois_matrix.rs  group_ring_field.rs  iterative_bfs.rs  iterative_bfs_new.rs  left_right_cayley.rs  lps.rs  matrix.rs  matrix_enumerator.rs  mod.rs  multinomial.rs  pauli.rs  polymatrix.rs  polynomial.rs  quotient_polynomial.rs  sparse_ffmatrix.rs  sparse_pauli.rs
src/matrices/: ffmatrix.rs  ffx_matrix.rs  galois_matrix.rs  mat_trait.rs  mod.rs  parallel_matrix.rs  polymatrix.rs  sparse_ffmatrix.rs  sparse_sparse_ffmatrix.rs  sparse_vec.rs
tmp2/: p_3_dim_3_deg_2.hg
