[package]
name = "qec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
blas-src = { version = "0.9.0", features = ["accelerate"] }
deepsize = "0.2.0"
ff = { version = "0.13.0", features = ["derive"] }
gcd = "2.3.0"
mhgl = {version = "*", path="/Users/matt/repos/mhgl"}
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = { version = "*", path = "../ndarray-linalg/ndarray-linalg" }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = "1.4.1"
