[package]
name = "hdx_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
ff = { version = "0.13.0", features = ["derive"] }
gcd = "2.3.0"
mhgl = {version = "*", path="/Users/matt/repos/mhgl"}
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = "1.4.1"

[[bin]]
name = "hdxplorer"
test = false
bench = false
