[package]
name = "hdx_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
gcd = "2.3.0"
log = "0.4.21"
mhgl = { version = "*", git = "https://github.com/matthagan15/mhgl.git", branch = "main" }
# mhgl = { version = "*", path = "/Users/matt/repos/mhgl" }
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = "1.4.1"
simple_logger = "5.0.0"

[[bin]]
name = "hdxplorer"
test = false
bench = false

[[bin]]
name = "lps_explorer"
test = false
bench = false
